# pc_proof

./: .gitignore  README.md  logic.lark  parser.py  pylock.toml  pyproject.toml  sequent.py  tableau.py
.github/workflows/: ci.yml
pc_proof.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: cli.py  logic.lark  parser.py  tableau.py  viz.py
src/pc_proof/: __init__.py  sequent.py  tableau.py
tests/: test_cli.py  test_parser.py  test_sequent.py  test_tableau.py  test_viz.py
