[project]
name = "pc_proof"
version = "0.1.0"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
  "lark>=1.2",      # or just "lark"
  "graphviz>=0.20",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]
[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["parser", "sequent", "tableau", "viz", "cli"]

[project.scripts]
pc-proof = "cli:main"
